syntax = "proto3";
package calculator;
option go_package = "./pb";

service Calculator {
    rpc Add(CalculationRequest) returns (CalcuationResponse);
    rpc Divide(CalculationRequest) returns (CalcuationResponse);
    rpc Sum(NumbersRequest) returns (CalcuationResponse);
    rpc Multiply(MultiplicationRequest) returns (MultiplicationResponse);
}

message CalculationRequest {
    int64 a = 1;
    int64 b = 2;
}


message CalcuationResponse {
     int64 result = 1;
}


message NumbersRequest {
    repeated int64 numbers = 1; // expects a list of numbers
}

message MultiplicationRequest {
    double a = 1;
    double b = 2;
}
message MultiplicationResponse {
    double result = 1;
}